Fixing overflow issue on css

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
   width: auto;
   min-width: 320px;
   background-color: #F4F1E1;
+  overflow: scroll;
 }
 
 .landing-header, .social-links {
